--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,7 @@ build
 # Nuxt.js build / generate output
 .nuxt
 dist
-
+/data/config.env
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and *not* Next.js
