--- a/data/config.env
+++ b/data/config.env
@@ -1,4 +1,4 @@
 PORT =4000
-MONGO_URI =mongodb://0.0.0.0:27017
+MONGO_URI =mongodb+srv://dharmikpmobio:Dharmik1234@cluster0.aphvooe.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET =dharmikpateltodoappp34r3e5345
 NODE_ENV =Development
